--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 
     <h2 class=" head">
-        BMI Calculator
+        Vücut Kitle İndeksi 
     </h2>
       <div class="container">
           <div class="row">
